--- a/scss/koi-styles.scss
+++ b/scss/koi-styles.scss
@@ -1,5 +1,5 @@
 @use 'koi' as *;
 
-// @include base;
-// @include components;
-// @include utilities;
+@include base;
+@include components;
+@include utilities;
