--- a/scss/base/_layer.scss
+++ b/scss/base/_layer.scss
@@ -11,5 +11,6 @@
 // --------------------------------
 
 @mixin vars {
+  // --------Z-INDEX--------
   @include generate-css-vars(theme(layer), $layer-prefix);
 }
