--- a/scss/base/_shadow.scss
+++ b/scss/base/_shadow.scss
@@ -11,5 +11,6 @@
 // --------------------------------
 
 @mixin vars {
+  // --------SHADOWS--------
   @include generate-css-vars(theme(shadow), $shadow-prefix);
 }
