--- a/scss/base/_spacing.scss
+++ b/scss/base/_spacing.scss
@@ -11,5 +11,6 @@
 // --------------------------------
 
 @mixin vars {
+  // --------SPACING--------
   @include generate-css-vars(theme(spacing), $spacing-prefix);
 }
