--- a/scss/config/_internal.scss
+++ b/scss/config/_internal.scss
@@ -4,18 +4,19 @@
 
 // CSS Custom properties prefixes
 
-$animation-prefix: anim;
+$animation-prefix: animation;
 $color-prefix: color;
 $delay-prefix: delay;
 $font-family-prefix: font;
-$font-size-prefix: fs;
-$fluid-font-size-prefix: ffs;
+$font-size-prefix: font-size;
+$fluid-font-size-prefix: fluid-font-size;
 $font-weight-prefix: font;
 $layer-prefix: z;
 $leading-prefix: leading;
 $tracking-prefix: tracking;
 $gradient-prefix: gradient;
 $duration-prefix: duration;
+$radius-prefix: radius;
 $shadow-prefix: shadow;
 $screens-prefix: screen;
 $spacing-prefix: size;
