--- a/scss/tokens/_spacing.scss
+++ b/scss/tokens/_spacing.scss
@@ -3,47 +3,65 @@
 // --------------------------------
 
 @use 'sass:map';
+@use 'sass:math';
+
+// --------------------------------
+//   Vars
+// --------------------------------
 
 $spacer: 1rem;
+
+// --------------------------------
+//   Functions
+// --------------------------------
+
+@function rem($size-in-pixel) {
+  $size: math.div($size-in-pixel, 16);
+  @return #{$size}rem;
+}
+
+// --------------------------------
+//   Tokens
+// --------------------------------
 
 // Base spacing system
 $spacing-scale: (
   0: 0,
-  1: 0.0625rem,
-  2: 0.125rem,
-  4: 0.25rem,
-  6: 0.375rem,
-  8: 0.5rem,
-  10: 0.625rem,
-  12: 0.75rem,
-  14: 0.875rem,
-  16: 1rem,
-  20: 1.25rem,
-  24: 1.5rem,
-  28: 1.75rem,
-  32: 2rem,
-  36: 2.25rem,
-  40: 2.5rem,
-  44: 2.75rem,
-  48: 3rem,
-  56: 3.5rem,
-  64: 4rem,
-  80: 5rem,
-  96: 6rem,
-  112: 7rem,
-  128: 8rem,
-  144: 9rem,
-  160: 10rem,
-  176: 11rem,
-  192: 12rem,
-  208: 13rem,
-  224: 14rem,
-  256: 16rem,
-  288: 18rem,
-  320: 20rem,
-  384: 24rem,
-  448: 28rem,
-  512: 32rem,
+  1: rem(1),
+  2: rem(2),
+  4: rem(4),
+  6: rem(6),
+  8: rem(8),
+  10: rem(10),
+  12: rem(12),
+  14: rem(14),
+  16: rem(16),
+  20: rem(20),
+  24: rem(24),
+  28: rem(28),
+  32: rem(32),
+  36: rem(36),
+  40: rem(40),
+  44: rem(44),
+  48: rem(48),
+  56: rem(56),
+  64: rem(64),
+  80: rem(80),
+  96: rem(96),
+  112: rem(112),
+  128: rem(128),
+  144: rem(144),
+  160: rem(160),
+  176: rem(176),
+  192: rem(192),
+  208: rem(208),
+  224: rem(224),
+  256: rem(256),
+  288: rem(288),
+  320: rem(320),
+  384: rem(384),
+  448: rem(448),
+  512: rem(512),
 ) !default;
 
 $spacers: (
