--- a/scss/base/_default.scss
+++ b/scss/base/_default.scss
@@ -10,6 +10,7 @@
 // --------------------------------
 
 @mixin styles {
+  /*! purgecss start ignore */
   ::selection {
     background-color: var(--koi-selection-background, accent(1));
     color: var(--koi-selection-foreground, fill(black));
@@ -235,4 +236,5 @@
     background-repeat: no-repeat;
     background-size: 16px 12px;
   }
+  /*! purgecss end ignore */
 }
